# mac_notifier

./: README.md  readme.md  setup.cfg
mac_notifier/: main.py
