[metadata]
name = mac_notifier
version = 0.0.0
description = Display notifications, alerts and dialogs on mac from command line
author = xirenhua
author_email = xirenhua@outlook.com
url = https://github.com/xirenhua/mac_notifier

[options]
packages = find:
install_requires =
    click

[options.entry_points]
console_scripts =
    dsp = mac_notifier.main:dsp