[metadata]
name = mac_notifier
version = 0.0.3
description = Display notifications, alerts and dialogs on mac from command line
long_description = file: README.md
long_description_content_type = text/markdown
author = xirenhua
author_email = xirenhua@outlook.com
url = https://github.com/xirenhua/mac_notifier

[options]
packages = find:
install_requires =
    click

[options.entry_points]
console_scripts =
    dsp = mac_notifier.main:dsp